--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,13 @@ core.Microsoft*
 core.mongo*
 core.python*
 env.py
+.venv
 __pycache__/
 *.py[cod]
 node_modules/
 .github/
 cloudinary_python.txt
 kaggle.json
+
+inputs/
+outputs/
